--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -5,7 +5,7 @@
 
     &:hover {
         cursor: pointer;
-        width: 32px;
-        transition: width 0.3s ease;
+        scale: (1.1);
+        transition: scale 0.3s ease;
     }
 }
