--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,7 +1,18 @@
 //Utility
 
-.bg_primary {
+.bg_primary,
+.btn.bg_primary {
     background-color: #e3f2fd;
+
+
+}
+
+.btn.bg_primary {
+    &:hover {
+        &:hover {
+            background-color: #bddff8;
+        }
+    }
 }
 
 
