--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,6 @@
+@use './partials/homepage';
+
+
 :root {
     --primary-color: #e3f2fd;
     --primary-darker: #bddff8;
@@ -17,7 +20,8 @@
 }
 
 * {
-    font-family: 'Roboto Mono', monospace, sans-serif;
+    font-family: 'Nunito', sans-serif;
+
 }
 
 //Utility
