edited projects layout and style

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
     --muted-color: #7c838a;
     --text-primary: #000000;
     --switch-dark: #ffffff;
+    --text-almost-white: #efefef;
 }
 
 [data-theme="dark"] {
